--- a/app/src/main/res/layout/activity_add_event_details.xml
+++ b/app/src/main/res/layout/activity_add_event_details.xml
@@ -42,7 +42,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.95"
             android:ems="10"
-            android:inputType="number" />
+            android:inputType="text" />
     </LinearLayout>
 
     <LinearLayout
