--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="ca.bcit.ass3.booker_bruecker.EventDetails">
+    tools:context="ca.bcit.ass3.booker_bruecker.EventDetails"
+    android:orientation="vertical">
 
     <include layout="@layout/events_toolbar" android:id="@+id/toolbar"/>
 
