--- a/app/src/main/res/layout/two_button_list_item.xml
+++ b/app/src/main/res/layout/two_button_list_item.xml
@@ -20,7 +20,7 @@
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:layout_marginRight="5dp"
-        android:text="Delete" />
+        android:text="@string/delete" />
 
     <Button
         android:id="@+id/add_btn"
@@ -29,6 +29,6 @@
         android:layout_toLeftOf="@id/delete_btn"
         android:layout_centerVertical="true"
         android:layout_marginRight="10dp"
-        android:text="Add" />
+        android:text="@string/edit" />
 
 </RelativeLayout>
