--- a/app/src/main/res/layout/two_button_list_item.xml
+++ b/app/src/main/res/layout/two_button_list_item.xml
@@ -5,10 +5,11 @@
 
     <TextView
         android:id="@+id/list_item_string"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="16dp"
         android:paddingLeft="8dp"
         android:textSize="18sp"
         android:textStyle="bold" />
@@ -17,18 +18,21 @@
         android:id="@+id/delete_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
         android:layout_marginRight="5dp"
-        android:text="@string/delete" />
+        android:text="@string/delete"
+        android:layout_alignBaseline="@+id/add_btn"
+        android:layout_alignBottom="@+id/add_btn"
+        android:layout_centerHorizontal="true" />
 
     <Button
         android:id="@+id/add_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toLeftOf="@id/delete_btn"
-        android:layout_centerVertical="true"
         android:layout_marginRight="10dp"
-        android:text="@string/edit" />
+        android:text="@string/edit"
+        android:layout_below="@+id/list_item_string"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="10dp" />
 
 </RelativeLayout>
