--- a/app/src/main/res/layout/activity_add_event_details.xml
+++ b/app/src/main/res/layout/activity_add_event_details.xml
@@ -7,6 +7,13 @@
     tools:context="ca.bcit.ass3.booker_bruecker.AddEvent"
     android:orientation="vertical">
 
+    <Button
+        android:id="@+id/backBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="goBack"
+        android:text="@string/back_btn" />
+
     <LinearLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent">
