--- a/app/src/main/res/layout/two_button_list_item.xml
+++ b/app/src/main/res/layout/two_button_list_item.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:background="?attr/colorPrimary">
 
     <TextView
         android:id="@+id/list_item_string"
@@ -19,10 +20,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="5dp"
+        android:layout_marginBottom="5dp"
         android:text="@string/delete"
         android:layout_alignBaseline="@+id/add_btn"
         android:layout_alignBottom="@+id/add_btn"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:background="?attr/colorAccent"/>
 
     <Button
         android:id="@+id/add_btn"
@@ -33,6 +36,8 @@
         android:layout_below="@+id/list_item_string"
         android:layout_alignParentStart="true"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="10dp" />
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="5dp"
+        android:background="?attr/colorAccent"/>
 
 </RelativeLayout>
