--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#B8DBD9</color>
+    <color name="colorPrimaryDark">#586F7C</color>
+    <color name="colorAccent">#EDAE49</color>
+    <color name="colorBG">#F4F4F9</color>
 </resources>
